--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <span>Altura(m)</span>
             <input  type="text" id="height">
         </label>
-        <input type="submit" value="Calcular" id="button">
+        <button id="button"> Calcular</button>
         <p id="result">Calcule o valor do seu IMC</p>
     </div>
     </div>
